[gd_scene load_steps=2 format=3 uid="uid://lvstp3fr2ium"]

[ext_resource type="Script" path="res://Scripts/Screens/MainMenu.gd" id="1_4ph2u"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ph2u")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.232
anchor_right = 0.5
anchor_bottom = 0.232
offset_left = -196.0
offset_top = -41.336
offset_right = 196.0
offset_bottom = 41.664
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "DEVIL BLOOD"
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="playButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Play"

[node name="settingsButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
text = "Settings"

[node name="creditsButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Credits"

[node name="quitButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Buttons/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/settingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Buttons/quitButton" to="." method="_on_quit_button_pressed"]
